# amazon-q-developer-cli

./: AI-ndm.md  Cargo.toml
crates/amzn-codewhisperer-client/src/: config.rs
crates/amzn-codewhisperer-streaming-client/src/: config.rs
crates/amzn-consolas-client/src/: config.rs
crates/amzn-qdeveloper-streaming-client/src/: config.rs
crates/chat-cli/: Cargo.toml
crates/chat-cli/src/cli/agent/: mod.rs
crates/chat-cli/src/cli/chat/: conversation.rs  mod.rs  prompt.rs  server_messenger.rs  tool_manager.rs
crates/chat-cli/src/cli/chat/cli/: mod.rs  reply.rs
crates/chat-cli/src/cli/chat/tool_manager/: sampling.rs
crates/chat-cli/src/mcp_client/: client.rs  facilitator_types.rs  messenger.rs  mod.rs  sampling.rs  server.rs
crates/chat-cli/test_mcp_server/: test_server.rs
crates/chat-script/: Cargo.toml
crates/chat-script/src/: lib.rs
crates/semantic-search-client/src/client/: async_implementation.rs
docs/: SUMMARY.md  mcp-test-server.md
docs/sampling/: overview.md  specification.md
